# chess-bot

./: .gitignore  Makefile  config.yaml  knowledge.md  pyproject.toml  setup.py
scripts/: benchmark_self_play.py  check_gpu.py  check_openmp.py  test_self_play.py  test_training_loop.py  train.py  verify_batch_mcts.py
src/: modal_app.py  utils.py
src/agents/: base_agent.py  chess_agent.py  ppo_agent.py
src/api/: main.py
src/core/: action_encoding.py  chess_env.py  config.py  self_play_env.py  state_encoder.py  vector_chess_env.py  vector_self_play_env.py
src/cpp/: bindings.cpp  mcts.cpp
src/models/: __init__.py  transformer_net.py
src/rl/: grpo.py  ppo.py
src/search/: __init__.py  mcts.py  mcts_cpp.py  mcts_hybrid.py
src/training/: async_verifier.py  buffer.py  rewards.py  trainer.py  verifiers.py
tests/: test_config.py  test_encoder.py  test_env.py  test_grpo.py  test_grpo_mcts.py  test_hybrid_manual.py  test_mcts_cpp.py  test_model.py  test_ppo.py  test_ppo_mcts.py  test_rewards.py  test_self_play_env.py
web/: index.html  script.js  style.css
web-svelte/: index.html  package-lock.json  package.json
web-svelte/src/: App.svelte
